[gd_scene load_steps=19 format=3 uid="uid://w0jyhqa8ihg7"]

[ext_resource type="Script" path="res://Enemies/Mistress/Mistress.gd" id="1_7v5pw"]
[ext_resource type="PackedScene" uid="uid://cyw5ddt55ypio" path="res://Enemies/Mistress/Strike.tscn" id="2_gaos0"]
[ext_resource type="Texture2D" uid="uid://c4w3g675l48v8" path="res://Enemies/Mistress/MistressAttack1.png" id="2_vdjfy"]
[ext_resource type="Texture2D" uid="uid://bc5frio1y2lch" path="res://Enemies/Mistress/MistressAttack2.png" id="3_t05l4"]
[ext_resource type="Texture2D" uid="uid://blt6imtlb0207" path="res://Enemies/Mistress/MistressAttack3.png" id="4_kuox3"]
[ext_resource type="Texture2D" uid="uid://qfdknti8m432" path="res://Enemies/Mistress/MistressAttack4.png" id="5_jlhhc"]
[ext_resource type="Texture2D" uid="uid://burs7jihnlaew" path="res://Enemies/Mistress/MistressDie1.png" id="6_6awsc"]
[ext_resource type="Texture2D" uid="uid://7wj008r8l87o" path="res://Enemies/Mistress/MistressDie2.png" id="7_xhuse"]
[ext_resource type="Texture2D" uid="uid://dmptceknv5pdj" path="res://Enemies/Mistress/MistressDie3.png" id="8_k58p3"]
[ext_resource type="Texture2D" uid="uid://jm7xwurdg3x1" path="res://Enemies/Mistress/MistressIdle.png" id="9_r3tdh"]
[ext_resource type="Texture2D" uid="uid://c2gdxaexohft3" path="res://Enemies/Mistress/MistressWalk0.png" id="10_qfv6u"]
[ext_resource type="Texture2D" uid="uid://c1qx465jjx55j" path="res://Enemies/Mistress/MistressWalk1.png" id="11_gj046"]
[ext_resource type="Texture2D" uid="uid://shb5j0r6pv1f" path="res://Enemies/Mistress/MistressWalk2.png" id="12_253bp"]
[ext_resource type="Texture2D" uid="uid://b7ka4qcbjbtqu" path="res://Enemies/Mistress/MistressWalk3.png" id="13_7nyrf"]
[ext_resource type="Texture2D" uid="uid://bbc2lulu15u4i" path="res://Enemies/Mistress/MistressWalk4.png" id="14_y81io"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4xuku"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cbtah"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_6awsc")
}, {
"duration": 1.0,
"texture": ExtResource("7_xhuse")
}, {
"duration": 1.0,
"texture": ExtResource("8_k58p3")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_r3tdh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vdjfy")
}, {
"duration": 1.0,
"texture": ExtResource("3_t05l4")
}, {
"duration": 1.0,
"texture": ExtResource("4_kuox3")
}, {
"duration": 1.0,
"texture": ExtResource("5_jlhhc")
}, {
"duration": 5.0,
"texture": ExtResource("9_r3tdh")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_qfv6u")
}, {
"duration": 1.0,
"texture": ExtResource("11_gj046")
}, {
"duration": 1.0,
"texture": ExtResource("12_253bp")
}, {
"duration": 1.0,
"texture": ExtResource("13_7nyrf")
}, {
"duration": 1.0,
"texture": ExtResource("14_y81io")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_jhqvh"]

[node name="Mistress" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_7v5pw")
bullet_scene = ExtResource("2_gaos0")
speed = 6
health = 100

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.21794, 0, 0, 0, 1.74554, 0, 0, 0, 1.24663, 0, 0, 0)
shape = SubResource("CapsuleShape3D_4xuku")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
billboard = 1
sprite_frames = SubResource("SpriteFrames_cbtah")
animation = &"shoot"

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(7.124, 0, 0, 0, 3.38403, 0, 0, 0, 8, 0, 0, 0)
shape = SubResource("BoxShape3D_jhqvh")

[node name="LaunchMarker" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0125246, 0.375727, -1.41525)

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite3D" to="." method="_on_animated_sprite_3d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite3D" to="." method="_on_animated_sprite_3d_animation_looped"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
